# tree-sitter

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODOS.md  handoff.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/context/: Cargo.toml  README.md
crates/context/benches/fixtures/: medium.rs  medium_edited.rs  small.rs
crates/context/bindings/: AmbiguousStableId.ts  AstCell.ts  Bundle.ts  BundleResult.ts  Candidate.ts  Confidence.ts  Exhausted.ts  NotFound.ts  OmittedChunk.ts  Provenance.ts  UnknownCrossFile.ts
crates/context/examples/: smoke_benchmark.rs
crates/context/src/: bundle.rs  chunk.rs  compact.rs  graph.rs  identity.rs  invalidation.rs  lib.rs  orientation.rs  pagerank.rs  protocol.rs  schema.rs  sexpr.rs  snapshot_cache.rs  symbols.rs
crates/context/src/graph/: diff.rs  extract.rs  postprocess.rs  snapshot.rs  store.rs  xref.rs
crates/context/tests/: bundle_contract.rs  compact_contract.rs  generated_types_contract.rs  graph_snapshot_contract.rs  orientation_block_contract.rs  sexpr_contract.rs
docs/: ts.md
docs/brainstorms/: 2026-04-26-r0-context-firewall-requirements.md  2026-04-26-r1-repo-map-requirements.md  2026-04-26-r2-orientation-handshake-requirements.md  2026-04-26-r3-god-nodes-requirements.md  2026-04-28-ast-aware-read-tool-requirements.md  2026-04-28-semantic-session-compaction-requirements.md
docs/ideation/: 2026-04-26-tree-sitter-pi-integration-ideation.md  2026-04-26-tree-sitter-repo-navigation-ideation.md
docs/plans/: 2026-04-26-002-feat-r1-repo-map-plan.md  (+19 more)
scripts/: orientation-handshake-harness.mjs
(+20 files in other folders)
