[package]
name                   = "tree-sitter-context"
version.workspace      = true
description            = "Library for extracting token-efficient code context from Tree-sitter syntax trees"
authors.workspace      = true
edition.workspace      = true
rust-version.workspace = true
homepage.workspace     = true
repository.workspace   = true
documentation          = "https://docs.rs/tree-sitter-context"
license.workspace      = true
keywords               = [ "incremental", "parsing", "context", "llm" ]
categories             = [ "parsing", "text-editors" ]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-tags.workspace = true

[dev-dependencies]
tree-sitter-rust = "0.24.2"
